# ClangiOS

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: build.yml
cmake/: iOS_toolchain.cmake
patches/: clang.patch
src/: AppClangParse.cpp
